--- a/gc/index.html
+++ b/gc/index.html
@@ -95,19 +95,19 @@
             </ul>
             <span class="nav-item social-icons">
                 <span class="fa-stack">
-                    <a href="https://www.facebook.com/gamesconverse">
+                    <a href="https://www.facebook.com/gamesconverse" target="_blank">
                         <span class="hexagon"></span>
                         <i class="fab fa-facebook-f fa-stack-1x"></i>
                     </a>
                 </span>
                 <span class="fa-stack">
-                    <a href="https://twitter.com/games_converse">
+                    <a href="https://twitter.com/games_converse" target="_blank">
                         <span class="hexagon"></span>
                         <i class="fab fa-twitter fa-stack-1x"></i>
                     </a>
                 </span>
                 <span class="fa-stack">
-                    <a href="https://instagram.com/gamesconverse">
+                    <a href="https://instagram.com/gamesconverse" target="_blank">
                         <span class="hexagon"></span>
                         <i class="fab fa-instagram fa-stack-1x"></i>
                     </a>
@@ -689,19 +689,19 @@
                         <h3>Follow Games Converse On Social Media</h3>
 
                         <span class="fa-stack">
-                            <a href="https://www.facebook.com/gamesconverse">
+                            <a href="https://www.facebook.com/gamesconverse" target="_blank">
                                 <span class="hexagon"></span>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="https://twitter.com/games_converse">
+                            <a href="https://twitter.com/games_converse" target="_blank">
                                 <span class="hexagon"></span>
                                 <i class="fab fa-twitter fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="https://www.instagram.com/gamesconverse/">
+                            <a href="https://www.instagram.com/gamesconverse/" target="_blank">
                                 <span class="hexagon"></span>
                                 <i class="fab fa-instagram fa-stack-1x"></i>
                             </a>
