--- a/gc/index.html
+++ b/gc/index.html
@@ -639,7 +639,7 @@
                 <div class="col-lg-7 col-xl-6">
                     <div class="text-container">
                         <div class="section-title">IMPACT</div>
-                        <h2>Thanks to our players for bieng part of the solution!</h2>
+                        <h2>Thanks to our players for being part of the solution!</h2>
                         <p>Our current campaign's goal is to plant 5000 trees in the Amazon rainforest until the end of October of 2021.</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
