--- a/gc/index.html
+++ b/gc/index.html
@@ -730,8 +730,12 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="text-container about">
-                        <h4>Few Words About Games Converse</h4>
-                        <p class="white">We're passionate about delivering the best business growth services for companies just starting out as startups or industry players that have established their market position a long tima ago.</p>
+                        <h4>Our commitments towards our community</h4>
+                        <p class="white">
+                            1)  Promoting awareness of environmental and animal rights issues through our games: having game characters that encourage people to join a cause;
+                            <br>
+                            2) Take action on broad issues: address different issues through game play that would inspire action on a specific cause;
+                            </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-md-2">
