--- a/gc/index.html
+++ b/gc/index.html
@@ -124,8 +124,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
+                        <center><img src="images/website_phone_home.gif"></center>
                         <div class="text-container">
-                            <center><img src="images/website_phone_home.gif" width="20%" height="20%"></center>
                             <h1>Games Converse is <span id="js-rotating">an application,a gaming HUB,hope.</span></h1>
                             <p class="p-heading p-large">Have fun and make a difference to the world</p>
                             <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a>
