--- a/gc/index.html
+++ b/gc/index.html
@@ -122,7 +122,7 @@
     <header id="header" class="header">
         <div class="header-content">
             <div class="container">
-                <center><img src="images/website_phone_home.gif"></center>
+                <center><img src="images/website_phone_home.gif" width="auto" height="250px"></center>
 
                 <div class="row">
                     <div class="col-lg-12">
