--- a/gc/index.html
+++ b/gc/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Aria is a business focused HTML landing page template built with Bootstrap to help you create lead generation websites for companies and their services.">
-    <meta name="author" content="Inovatik">
+    <meta name="description" content="Games Converse is a violence-free hosting platform for casual mobile games that raise awareness about environmental and animal rights issues through the gameplay.">
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on LinkedIn, Facebook, Google+ -->
-	<meta property="og:site_name" content="" /> <!-- website name -->
+	<meta property="og:site_name" content="Games Converse" /> <!-- website name -->
 	<meta property="og:site" content="" /> <!-- website link -->
-	<meta property="og:title" content=""/> <!-- title shown in the actual shared post -->
-	<meta property="og:description" content="" /> <!-- description shown in the actual shared post -->
-	<meta property="og:image" content="" /> <!-- image link, make sure it's jpg -->
+	<meta property="og:title" content="Games Converse and you."/> <!-- title shown in the actual shared post -->
+	<meta property="og:description" content="Games Converse is a violence-free hosting platform for short mobile games that raise awareness about environmental and animal rights issues through the gameplay." /> <!-- description shown in the actual shared post -->
+	<meta property="og:image" content="images/logo2.jpg" /> <!-- image link, make sure it's jpg -->
 	<meta property="og:url" content="" /> <!-- where do you want your post to link to -->
 	<meta property="og:type" content="article" />
 
@@ -122,7 +121,7 @@
     <header id="header" class="header">
         <div class="header-content">
             <div class="container">
-                <center><img src="images/website_phone_home.gif" width="auto" height="250px"></center>
+               
 
                 <div class="row">
                     <div class="col-lg-12">
