--- a/gc/index.html
+++ b/gc/index.html
@@ -290,8 +290,8 @@
                     </div>
                     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionOne">
                         <div class="accordion-body">
-                            There are free games that anyone has access and the premium ones that are locked. You may unlock them by purchasing coins.
-                            You can also earn coins by playing the free games, doing daily quests, sharing the app with your friends etc.
+                            There are free games that everyone has access to, and the premium ones that are unlocked with coins.
+                            You can purchase coins or earn them by playing games, doing daily quests or sharing the app with your friends.
                         </div>
                     </div>
                 </div> <!-- end of item -->
@@ -338,7 +338,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Read the Community's Reviews</h2>
-                    <p class="p-heading">Our community is created by our partners and the players who keep this project going and we can not imagine a better future for our planet without them.</p>
+                    <p class="p-heading">Our community is created by our partners and the players who keep this project going and we cannot imagine a better future for our planet without them.</p>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
             <div class="row">
