--- a/gc/index.html
+++ b/gc/index.html
@@ -744,7 +744,7 @@
                         <h4>Links</h4>
                         <ul class="list-unstyled li-space-lg white">
                             <li>
-                                <a class="white" href="#your-link">startupguide.com</a>
+                                <a class="white" href="https://form.jotform.com/211236586088360">Subscribe to our Newsletter</a>
                             </li>
                             <li>
                                 <a class="white" href="terms-conditions.html">Terms & Conditions</a>
