--- a/gc/index.html
+++ b/gc/index.html
@@ -761,13 +761,13 @@
                         <h4>Tools</h4>
                         <ul class="list-unstyled li-space-lg">
                             <li>
-                                <a class="white" href="#your-link">businessgrowth.com</a>
+                                <a class="white" href="https://playing4theplanet.org/">Playing for the Planet</a>
                             </li>
                             <li>
-                               <a class="white" href="#your-link">influencers.com</a>
+                               <a class="white" href="http://www.gamesforchange.org/">Games for Change</a>
                             </li>
                             <li class="media">
-                                <a class="white" href="#your-link">optimizer.net</a>
+                                <a class="white" href="https://gameimpact.fr/">Game Impact</a>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
