--- a/gc/index.html
+++ b/gc/index.html
@@ -367,7 +367,7 @@
                                         <img class="card-image" src="images/avatar_unknown_4.png" alt="alternative">
                                         <div class="card-body">
                                             <div class="testimonial-text">All our games are made with love to spread hope of a better future. </div>
-                                            <div class="testimonial-author">Nielisson Mendonça - Funder</div>
+                                            <div class="testimonial-author">Nielisson Mendonça - Founder</div>
                                         </div>
                                     </div>        
                                 </div> <!-- end of swiper-slide -->
