--- a/gc/index.html
+++ b/gc/index.html
@@ -74,12 +74,16 @@
                     <a class="nav-link page-scroll" href="#callMe">CALL ME</a>
                 </li> -->
                 <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#projects">PROJECTS</a>
+                    <a class="nav-link page-scroll" href="#projects">ONGOING CAMPAIGN</a>
                 </li>
 
-                <!-- Dropdown Menu -->          
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle page-scroll" href="#impact" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">IMPACT</a>
+                <li class="nav-item">
+                    <a class="nav-link page-scroll" href="#impact">IMPACT</a>
+                </li>
+
+                   <!-- Dropdown Menu -->          
+                   <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle page-scroll" href="#contact" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTACT</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">TERMS CONDITIONS</span></a>
                         <div class="dropdown-items-divide-hr"></div>
@@ -87,10 +91,6 @@
                     </div>
                 </li>
                 <!-- end of dropdown menu -->
-
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#contact">CONTACT</a>
-                </li>
             </ul>
             <span class="nav-item social-icons">
                 <span class="fa-stack">
@@ -129,7 +129,7 @@
                             <center><img src="images/website_phone_home.gif" height="100"></center>
                             <h1>Games Converse is <span id="js-rotating">an application,a gaming HUB,hope.</span></h1>
                             <p class="p-heading p-large">Have fun and make a difference to the world</p>
-                            <a class="btn-solid-lg page-scroll" href="#intro">DISCOVER</a>
+                           
                         </div>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
