--- a/gc/privacy-policy.html
+++ b/gc/privacy-policy.html
@@ -147,8 +147,11 @@
                 <div class="col-lg-12">
                     <div class="text-container">
                         <h3>Private Data We Receive And Collect</h3>
-                        <p>Aria also automatically collects and receives certain information from your computer or mobile device, including the activities you perform on our Website, the Platforms, and the Applications, the type of hardware and software you are using (for example, your operating system or browser), and information obtained from cookies. For example, each time you visit the Website or otherwise use the Services, we automatically collect your IP address, browser and device type, access times, the web page from which you came, the regions from which you navigate the web page, and the web page(s) you access (as applicable).</p>
-                        <p>When you first register for a Aria account, and when you use the Services, we collect some <a class="green" href="#your-link">Personal Information</a> about you such as:</p>
+                        <p>Nielisson Mendonça da Silva built the Games Converse app as a Commercial app. This SERVICE is provided by Nielisson Mendonça da Silva and is intended for use as is.
+                            This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.
+                            If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
+                            The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Games Converse unless otherwise defined in this Privacy Policy.
+                            </p>
                         <div class="row">
                             <div class="col-md-6">
                                 <ul class="list-unstyled li-space-lg indent">
