--- a/gc/STASH.htm
+++ b/gc/STASH.htm
@@ -448,3 +448,115 @@
         </div><!-- end of area-1 on same line and no space between comments to eliminate margin white space --><div class="area-2"></div> <!-- end of area-2 -->
     </div> <!-- end of tabs -->
     <!-- end of details 2 -->
+
+
+
+
+
+
+
+
+    <!-- policy bullet points-->
+
+    <div class="row">
+        <div class="col-md-6">
+            <ul class="list-unstyled li-space-lg indent">
+                <li class="media">
+                    <i class="fas fa-square"></i>
+                    <div class="media-body">The geographic area where you use your computer and mobile devices</div>
+                </li>
+                <li class="media">
+                    <i class="fas fa-square"></i>
+                    <div class="media-body">Your full name, username, and email address and other contact details</div>
+                </li>
+                <li class="media">
+                    <i class="fas fa-square"></i>
+                    <div class="media-body">A unique Aria user ID (an alphanumeric string) which is assigned to you upon registration</div>
+                </li>
+                <li class="media">
+                    <i class="fas fa-square"></i>
+                    <div class="media-body">Other optional information as part of your account profile</div>
+                </li>
+                <li class="media">
+                    <i class="fas fa-square"></i>
+                    <div class="media-body">Your IP Address and, when applicable, timestamp related to your consent and confirmation of consent</div>
+                </li>
+                <li class="media">
+                    <i class="fas fa-square"></i>
+                    <div class="media-body">Other information submitted by you or your organizational representatives via various methods</div>
+                </li>
+            </ul>
+        </div> <!-- end of col -->
+
+        <div class="col-md-6">
+            <ul class="list-unstyled li-space-lg indent">
+                <li class="media">
+                    <i class="fas fa-square"></i>
+                    <div class="media-body">Your billing address and any necessary other information to complete any financial transaction, and when making purchases through the Services, we may also collect your credit card or PayPal information</div>
+                </li>
+                <li class="media">
+                    <i class="fas fa-square"></i>
+                    <div class="media-body">User generated content (such as messages, posts, comments, pages, profiles, images, feeds or communications exchanged on the Supported Platforms)</div>
+                </li>
+                <li class="media">
+                    <i class="fas fa-square"></i>
+                    <div class="media-body">Images or other files that you may publish via our Services</div>
+                </li>
+                <li class="media">
+                    <i class="fas fa-square"></i>
+                    <div class="media-body">Information (such as messages, posts, comments, pages, profiles, images) we may receive relating to communications you send us, such as queries or comments concerning</div>
+                </li>
+            </ul>
+        </div> <!-- end of col -->
+    </div> <!-- end of row -->
+</div> <!-- end of text-container-->
+
+
+               
+<div class="row">
+    <div class="col-md-6">
+        <div class="text-container last">
+            <h3>Inquire What Data We Have</h3>
+            <p>Aria Landing Page uses tracking technology on the landing page, in the Applications, and in the Platforms, including mobile application identifiers and a unique Aria user ID to help us recognize you across different Services, to monitor usage and web traffic routing for the Services, and to customize and improve the Services.</p>
+            <p> By visiting Aria or using the Services you agree to the use of cookies in your browser and HTML-based emails. Cookies are small text files placed on your device when you visit a website. By using any of the Services, or submitting or collecting any Personal Information via the Services, you consent and use of your <a class="green" href="#your-link">Personal Information</a></p>
+        </div> <!-- end of text container -->
+    </div> <!-- end of col-->
+    <div class="col-md-6">
+
+        <!-- Privacy Form -->
+        <div class="form-container">
+            <form id="privacyForm" data-toggle="validator" data-focus="false">
+                <div class="form-group">
+                    <input type="text" class="form-control-input" id="pname" required>
+                    <label class="label-control" for="pname">Name</label>
+                    <div class="help-block with-errors"></div>
+                </div>
+                <div class="form-group">
+                    <input type="email" class="form-control-input" id="pemail" required>
+                    <label class="label-control" for="pemail">Email</label>
+                    <div class="help-block with-errors"></div>
+                </div>
+                <div class="form-group">
+                    <select class="form-control-select" id="pselect" required>
+                        <option class="select-option" value="" disabled selected>Select Option</option>
+                        <option class="select-option" value="Delete data">Delete my data</option>
+                        <option class="select-option" value="Show me data">Show me my data</option>
+                    </select>
+                    <div class="help-block with-errors"></div>
+                </div>
+                <div class="form-group checkbox">
+                    <input type="checkbox" id="pterms" value="Agreed-to-Terms" required>I have read and agree to Aria's <a href="privacy-policy.html">Privacy Policy</a> and <a href="terms-conditions.html">Terms Conditions</a>
+                    <div class="help-block with-errors"></div>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="form-control-submit-button">SUBMIT</button>
+                </div>
+                <div class="form-message">
+                    <div id="pmsgSubmit" class="h3 text-center hidden"></div>
+                </div>
+            </form>
+        </div> <!-- end of form container -->
+        <!-- end of privacy form -->
+
+    </div> <!-- end of col--> 
+</div> <!-- end of row -->
