--- a/gc/privacy-policy.html
+++ b/gc/privacy-policy.html
@@ -63,28 +63,28 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only">(current)</span></a>
+                <a class="nav-link page-scroll" href="index.html#header">HOME <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#intro">INTRO</a>
+                <a class="nav-link page-scroll" href="index.html#intro">INTRO</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#games">GAMES</a>
+                <a class="nav-link page-scroll" href="index.html#games">GAMES</a>
             </li>
           <!--  <li class="nav-item">
                 <a class="nav-link page-scroll" href="#callMe">CALL ME</a>
             </li> -->
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#projects">ONGOING CAMPAIGN</a>
+                <a class="nav-link page-scroll" href="index.html#projects">ONGOING CAMPAIGN</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#impact">IMPACT</a>
+                <a class="nav-link page-scroll" href="index.html#impact">IMPACT</a>
             </li>
 
                <!-- Dropdown Menu -->          
                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle page-scroll" href="#contact" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTACT</a>
+                <a class="nav-link dropdown-toggle page-scroll" href="index.html#contact" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTACT</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">TERMS CONDITIONS</span></a>
                     <div class="dropdown-items-divide-hr"></div>
