--- a/gc/privacy-policy.html
+++ b/gc/privacy-policy.html
@@ -160,6 +160,7 @@
                         <p>If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.</p>
                         <p>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at Games Converse unless otherwise defined in this Privacy Policy.</p>
                            
+                    </div> <!-- end of text container -->
                     
                     <div class="text-container">
                         <h3>Information Collection and Use</h3>
