--- a/gc/terms-conditions.html
+++ b/gc/terms-conditions.html
@@ -63,28 +63,28 @@
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#header">HOME <span class="sr-only">(current)</span></a>
+                <a class="nav-link page-scroll" href="index.html#header">HOME <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#intro">INTRO</a>
+                <a class="nav-link page-scroll" href="index.html#intro">INTRO</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#games">GAMES</a>
+                <a class="nav-link page-scroll" href="index.html#games">GAMES</a>
             </li>
           <!--  <li class="nav-item">
                 <a class="nav-link page-scroll" href="#callMe">CALL ME</a>
             </li> -->
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#projects">ONGOING CAMPAIGN</a>
+                <a class="nav-link page-scroll" href="index.html#projects">ONGOING CAMPAIGN</a>
             </li>
 
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#impact">IMPACT</a>
+                <a class="nav-link page-scroll" href="index.html#impact">IMPACT</a>
             </li>
 
                <!-- Dropdown Menu -->          
                <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle page-scroll" href="#contact" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTACT</a>
+                <a class="nav-link dropdown-toggle page-scroll" href="index.html#contact" id="navbarDropdown" role="button" aria-haspopup="true" aria-expanded="false">CONTACT</a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="terms-conditions.html"><span class="item-text">TERMS CONDITIONS</span></a>
                     <div class="dropdown-items-divide-hr"></div>
@@ -220,70 +220,6 @@
         </div> <!-- end of container -->
     </div> <!-- end of ex-basic-1 -->
     <!-- end of breadcrumbs -->
-
-
-    <!-- Footer -->
-    <div class="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="text-container about">
-                        <h4>Few Words About Aria</h4>
-                        <p class="white">We're passionate about creating the best mobile apps for personal develop passionate about creating the best mobile apps for. Personal develop passionate about creating the best mobile apps.</p>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">
-                        <h4>Links</h4>
-                        <ul class="list-unstyled li-space-lg white">
-                            <li>
-                                <a class="white" href="#your-link">startupguide.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="terms-conditions.html">Terms & Conditions</a>
-                            </li>
-                            <li>
-                                <a class="white" href="privacy-policy.html">Privacy Policy</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">
-                        <h4>Tools</h4>
-                        <ul class="list-unstyled li-space-lg">
-                            <li>
-                                <a class="white" href="#your-link">startupguide.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="terms-conditions.html">Terms & Conditions</a>
-                            </li>
-                            <li class="media">
-                                <a class="white" href="privacy-policy.html">Privacy Policy</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">
-                        <h4>Partners</h4>
-                        <ul class="list-unstyled li-space-lg">
-                            <li>
-                                <a class="white" href="#your-link">startupguide.com</a>
-                            </li>
-                            <li>
-                                <a class="white" href="terms-conditions.html">Terms & Conditions</a>
-                            </li>
-                            <li>
-                                <a class="white" href="privacy-policy.html">Privacy Policy</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of footer -->  
-    <!-- end of footer -->
 
 
     <!-- Copyright -->
