--- a/gc/index.html
+++ b/gc/index.html
@@ -259,6 +259,33 @@
                     </div>
                     <!-- end of card -->
 
+   <!-- Card -->
+   <div class="card">
+    <div class="card-image">
+        <img class="img-fluid" src="images/illu_kurupir.png" alt="alternative">
+    </div>
+    <div class="card-body">
+        <h3 class="card-title">Kurupir</h3>
+        <p>A fun rhythm-based puzzle game</p>
+        <ul class="list-unstyled li-space-lg">
+            <li class="media">
+                <i class="fas fa-square"></i>
+                <div class="media-body">Plant trees</div>
+            </li>
+            <li class="media">
+                <i class="fas fa-square"></i>
+                <div class="media-body">Distract the crow and survive!</div>
+            </li>
+        </ul>
+
+    </div>
+    <div class="button-container">
+        <a class="btn-solid-reg page-scroll" href="https://play.google.com/store/apps/details?id=com.tuokio.boomslingers&hl=fr&gl=US">Play!</a>
+    </div> <!-- end of button-container -->
+</div>
+<!-- end of card -->
+
+
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
@@ -806,7 +833,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p class="p-small">Games Converse. All rights reserved. <a href="https://inovatik.com">Template by Inovatik</a></p>
+                    <p class="p-small">@2021 Games Converse. All rights reserved. <a href="https://inovatik.com">Template by Inovatik</a></p>
                 </div> <!-- end of col -->
             </div> <!-- enf of row -->
         </div> <!-- end of container -->
