--- a/gc/index.html
+++ b/gc/index.html
@@ -259,34 +259,65 @@
                     </div>
                     <!-- end of card -->
 
-   <!-- Card -->
-   <div class="card">
-    <div class="card-image">
-        <img class="img-fluid" src="images/illu_kurupir.png" alt="alternative">
-    </div>
-    <div class="card-body">
-        <h3 class="card-title">Kurupir</h3>
-        <p>A fun rhythm-based puzzle game</p>
-        <ul class="list-unstyled li-space-lg">
-            <li class="media">
-                <i class="fas fa-square"></i>
-                <div class="media-body">Plant trees</div>
-            </li>
-            <li class="media">
-                <i class="fas fa-square"></i>
-                <div class="media-body">Distract the crow and survive!</div>
-            </li>
-        </ul>
-
-    </div>
-    <div class="button-container">
-        <a class="btn-solid-reg page-scroll" href="https://play.google.com/store/apps/details?id=com.tuokio.boomslingers&hl=fr&gl=US">Play!</a>
-    </div> <!-- end of button-container -->
-</div>
-<!-- end of card -->
-
-
                     <!-- Card -->
+                    <div class="card">
+                        <div class="card-image">
+                            <img class="img-fluid" src="images/illu_ishallrecycle.png" alt="alternative">
+                        </div>
+                        <div class="card-body">
+                            <h3 class="card-title">I Shall Recycle</h3>
+                            <p>A fast-paced drag and drop fun where you learn how to separate the garbage.</p>
+                            <ul class="list-unstyled li-space-lg">
+                                <li class="media">
+                                    <i class="fas fa-square"></i>
+                                    <div class="media-body">Take the items to the right garbage trucks</div>
+                                </li>
+                                <li class="media">
+                                    <i class="fas fa-square"></i>
+                                    <div class="media-body">Manage all the trucks well to not lose</div>
+                                </li>
+                            </ul>
+
+                        </div>
+                        <div class="button-container">
+                            <a class="btn-solid-reg page-scroll" href="https://play.google.com/store/apps/details?id=com.tuokio.boomslingers&hl=fr&gl=US">Play!</a>
+                        </div> <!-- end of button-container -->
+                    </div>
+                    <!-- end of card -->
+
+
+                        <!-- Card -->
+                        <div class="card">
+                            <div class="card-image">
+                                <img class="img-fluid" src="images/illu_energykeeper.png" alt="alternative">
+                            </div>
+                            <div class="card-body">
+                                <h3 class="card-title">Energy Keeper</h3>
+                                <p>Be a cute robot who takes care of a windmill farm</p>
+                                <ul class="list-unstyled li-space-lg">
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">Construct windmills</div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">Be careful with the enemies at night</div>
+                                    </li>
+                                    <li class="media">
+                                        <i class="fas fa-square"></i>
+                                        <div class="media-body">Save up your own energy</div>
+                                    </li>
+                                </ul>
+
+                            </div>
+                            <div class="button-container">
+                                <a class="btn-solid-reg page-scroll" href="https://play.google.com/store/apps/details?id=com.tuokio.boomslingers&hl=fr&gl=US">Play!</a>
+                            </div> <!-- end of button-container -->
+                        </div>
+                        <!-- end of card -->
+
+
+                    <!-- Card NEXT GAME IS COMING -- CAN BE DELETED! -------------- 
                     <div class="card">
                         <div class="card-image">
                             <img class="img-fluid" src="images/illu_coming soon.png" alt="alternative">
@@ -295,7 +326,7 @@
                             <h3 class="card-title">Our next game is coming soon!</h3>
                         </div>
                     </div>
-                    <!-- end of card -->
+                     end of card -->
 
                 
 
