--- a/gc/index.html
+++ b/gc/index.html
@@ -254,7 +254,7 @@
                     
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="https://play.google.com/store/apps/details?id=com.tuokio.boomslingers&hl=fr&gl=US">Play!</a>
+                            <a class="btn-solid-reg page-scroll" href="https://play.google.com/store/apps/">Play!</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -280,7 +280,7 @@
 
                         </div>
                         <div class="button-container">
-                            <a class="btn-solid-reg page-scroll" href="https://play.google.com/store/apps/details?id=com.tuokio.boomslingers&hl=fr&gl=US">Play!</a>
+                            <a class="btn-solid-reg page-scroll" href="https://play.google.com/store/apps/">Play!</a>
                         </div> <!-- end of button-container -->
                     </div>
                     <!-- end of card -->
@@ -301,7 +301,7 @@
                                     </li>
                                     <li class="media">
                                         <i class="fas fa-square"></i>
-                                        <div class="media-body">Be careful with the enemies at night</div>
+                                        <div class="media-body">Be careful with the enemies</div>
                                     </li>
                                     <li class="media">
                                         <i class="fas fa-square"></i>
@@ -311,7 +311,7 @@
 
                             </div>
                             <div class="button-container">
-                                <a class="btn-solid-reg page-scroll" href="https://play.google.com/store/apps/details?id=com.tuokio.boomslingers&hl=fr&gl=US">Play!</a>
+                                <a class="btn-solid-reg page-scroll" href="https://play.google.com/store/apps/">Play!</a>
                             </div> <!-- end of button-container -->
                         </div>
                         <!-- end of card -->
